--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -8,11 +8,11 @@
         <div>sessions via email, password, and accountToken</div>
       {{/link-to}}
       {{#link-to "users" class="list-group-item" disabled=true}}
-        <h4>User creation</h4>
+        <h4>User creation (WIP)</h4>
         <div>Registration with users</div>
       {{/link-to}}
       {{#link-to "service-plans" class="list-group-item" disabled=true}}
-        <h4>Service Plans</h4>
+        <h4>Service Plans (WIP)</h4>
         <div>Viewing Service Plans</div>
       {{/link-to}}
       {{#link-to "atomic" class="list-group-item"}}
@@ -29,6 +29,17 @@
       {{#link-to "apix.accounts" class="list-group-item"}}
         <h4>Accounts</h4>
         <div>All the accounts that belongs to the logged in user</div>
+      {{/link-to}}
+    </div>
+  </div>
+
+  <div class="panel panel-default">
+    <div class="panel-heading">apiz shared</div>
+    <div class="panel-body">These data models are available logged in accounts</div>
+    <div class="list-group">
+      {{#link-to "apiz.tiles" class="list-group-item"}}
+        <h4>Tiles</h4>
+        <div>All the tiles in an account</div>
       {{/link-to}}
     </div>
   </div>
