--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -41,6 +41,14 @@
         <h4>Tiles</h4>
         <div>All the tiles in an account</div>
       {{/link-to}}
+      {{#link-to "apiz.appointments" class="list-group-item"}}
+        <h4>Appointments</h4>
+        <div>queryable appointments (obviously not live)</div>
+      {{/link-to}}
+      {{#link-to "apiz.trucks" class="list-group-item"}}
+        <h4>Onsite Trucks</h4>
+        <div>Live trucks (open up multiple tabs to test)</div>
+      {{/link-to}}
     </div>
   </div>
 
