appointments channel and live appointments

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -45,6 +45,10 @@
         <h4>Appointments</h4>
         <div>queryable appointments (obviously not live)</div>
       {{/link-to}}
+      {{#link-to "apiz.live-appointments" class="list-group-item"}}
+        <h4>Live Appointments</h4>
+        <div>live appointments</div>
+      {{/link-to}}
       {{#link-to "apiz.trucks" class="list-group-item"}}
         <h4>Onsite Trucks</h4>
         <div>Live trucks (open up multiple tabs to test)</div>
